--- a/ready-html/Css/sidePopup.css
+++ b/ready-html/Css/sidePopup.css
@@ -6,8 +6,6 @@
   right:0;
   display: flex;
   align-items: center;
-  
-
 }
 
 .contact-btn{
@@ -39,7 +37,7 @@
     overflow-y: auto;
     background: #fff;
     max-width: 400px;
-    margin-right: -400px;
+    margin-right: -220px;
     z-index: 9999;
     transition: all .5s;
       box-sizing: border-box;
@@ -65,4 +63,57 @@
 }
 .open-box {
     margin-right: 0 !important;
+}
+
+.side-content{
+	box-sizing: content-box;
+	margin-top: 50px;
+	margin-inline: 20px;
+}
+
+.side-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none;
+	width: min-content;
+}
+.side-icons li
+{
+  margin-bottom:4px;
+}
+.side-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px;
+}
+.side-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:100px;
+  width:150px;
+  height:150px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear;
+}
+.side-icons a:active,.side-icons a:focus,.side-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe;
+}
+.side-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px;
 }
