--- a/ready-html/Css/common.css
+++ b/ready-html/Css/common.css
@@ -4,25 +4,9 @@
 	--side-small: 26;
 	--side-big: 36;
 	--depth: 4500px;
-	--transition: .75s cubic-bezier(.075, .5, 0, 1)
-	--colors-bg--300: #262626;
-  --colors-bg--500: #1c1c1c;
-  --colors-primary--200: #f4908b;
-  --colors-primary--300: #ea6f69;
-  --colors-primary--500: #e8615a;
-  --colors-primary--600: #9c3230;
-  --colors-primary--700: #5e2122;
-  --colors-primary--800: #451717;
-  --colors-primary--900: #3c181a;
-  --colors-secondary--500: #2be4ea;
-  --colors-secondary--900: #295459;
-  --colors-tertiary--500: #fed33f;
-  --colors-on_bg--500: var(--colors-primary--500);
-  --colors-on_tertiary--500: var(--colors-bg--300);
-  --colors-on_primary--500: var(--colors-primary--200);
-  --colors-active--500: #2bfea0;
-  --fonts-primary: "Rajdhani", sans-serif;
-  --fonts-secondary: "VT323", monospace;
+	--transition: .75s cubic-bezier(.075, .5, 0, 1);
+  --colors-bg--500: #01160f;
+  --colors-font--500: #aef672;
   --ui-glow: 0 0 5px var(--colors-primary--500);
   --ui-glow-borders--500: 0 0 3px var(--colors-primary--500);
   --ui-glow-color: currentcolor;
@@ -138,7 +122,7 @@ legend {
 @font-face {
 	font-family: raleway_c;
 	src: url(../fonts/raleway-v22-cyrillic-100.woff2);
-	font-weight: 100;
+	font-weight: 100; 
 }
 
 /* Скрываем Scrollbar */
@@ -153,15 +137,16 @@ html,
 body {
   background-color: var(--colors-bg--500);
   background-image: radial-gradient(
-    ellipse at 33% 10%,
-    #461616 0%,
-    transparent 75%
+    ellipse at 50% 50%,
+    #182b1f 50%,
+		transparent 95%,
+		#000000 90%,
+    transparent 25%
   );
 	display: flex;
 	flex-direction: column;
   background-repeat: no-repeat;
-  color: var(--colors-on_bg--500);
-  font-family: var(--fonts-primary);
+  color: var(--colors-font--500);
   font-size: 100%;
   line-height: 1.75;
   margin: 0;
